--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,10 @@ services:
   - type: web
     name: customer-churn-api
     runtime: python
-    buildCommand: "pip install -r requirements-prod.txt"
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
     envVars:
       - key: PYTHON_VERSION
-        value: "3.9.18"
+        value: "3.8.18"
       - key: FLASK_ENV
         value: "production"
