Update Python version to 3.9.13 and upgrade packages for better compatibility

--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,12 @@ services:
   - type: web
     name: customer-churn-api
     runtime: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
     envVars:
       - key: PYTHON_VERSION
-        value: "3.8.18"
+        value: "3.9.13"
       - key: FLASK_ENV
         value: "production"
+      - key: PIP_NO_CACHE_DIR
+        value: "1"
